# medical-redords

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  package.json  readme.md  requirements.txt  setup.sh
apps/audit/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/backend/: Dockerfile  README.md  alembic.ini  requirements.txt
apps/clinical_data/: __init__.py  apps.py  models.py  serializers.py  views.py
apps/integrations/: __init__.py  apps.py  urls.py  views.py
apps/medical_history/: __init__.py  apps.py  models.py  serializers.py  views.py
apps/patients/: admin.py  apps.py  models.py  serializers.py  views.py
apps/reports/: apps.py  urls.py  views.py
apps/security/: apps.py  (+8 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  patient.py  user.py
backend/app/security/: crypto.py
client/: package-lock.json  package.json
infra/: README.md  docker-compose.yml
medical_history/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
medical_history_app/: README.md  manage.py  medical_history.db  requirements.txt  setup_database.py  setup_simple.py
server/: index.js
templates/: base.html  dashboard.html  index.html  medical_history.html  patient_portal.html  patients.html  reports.html
(+79 files in other folders)
