[tool.poetry]
name = "medical-history-backend"
version = "0.1.0"
description = "HIPAA-ready medical history recording API"
authors = ["Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
orjson = "^3.10.7"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
passlib = {extras=["bcrypt"], version = "^1.7.4"}
python-jose = {extras=["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"
ruff = "^0.6.9"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

